--- a/windows/coda/AppxManifest.xml.in
+++ b/windows/coda/AppxManifest.xml.in
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Package xmlns="http://schemas.microsoft.com/appx/manifest/foundation/windows10" xmlns:uap="http://schemas.microsoft.com/appx/manifest/uap/windows10" xmlns:rescap="http://schemas.microsoft.com/appx/manifest/foundation/windows10/restrictedcapabilities" xmlns:desktop="http://schemas.microsoft.com/appx/manifest/desktop/windows10">
-    <Identity Name="CollaboraProductivityLtd.CollaboraOffice" Version="%VER" Publisher="CN=E9F172FF-9203-4DB8-A589-184C7A58C071" ProcessorArchitecture="%ARCH"/>
+    <Identity Name="CollaboraProductivityLtd.CODA" Version="%VER" Publisher="CN=E9F172FF-9203-4DB8-A589-184C7A58C071" ProcessorArchitecture="%ARCH"/>
     <Properties>
-        <DisplayName>Collabora Office</DisplayName>
+        <DisplayName>Collabora Online Desktop App</DisplayName>
         <PublisherDisplayName>Collabora Productivity Ltd</PublisherDisplayName>
         <Logo>Assets/logo.png</Logo>
     </Properties>
