initial CODA-Q Qt6 WebEngine app
implementation was adapted from the gtk/ WebKit app

--enable-qtapp switch should be used to build the Qt6 app.

requires the following packages to be installed at least on fedora
sudo dnf install \
  qt6-qtbase-devel \
  qt6-qtwebengine-devel \
  qt6-qtwebchannel-devel

Needs Qt tool Meta-Object Compiler (moc) to be in in the PATH. This is not the
case for when these packages are installed on fedora so right now PATH is
extended to include /usr/lib64/qt6/libexec - At this point in time I do not know
if this tool is ends up in the PATH by default for other distributions.

Uses QWebChannel from Qt for window.postMobile(Message/Error/Debug)
bridge.

see qt/README.md to how to build.

Co-authored-by: Jan Holesovsky <kendy@collabora.com>
Signed-off-by: Sarper Akdemir <sarper.akdemir@collabora.com>
Change-Id: Ib05893c058cb9db29485aacd5673ed1bb9fc2d42

--- a/Makefile.am
+++ b/Makefile.am
@@ -20,11 +20,15 @@ SUBDIRS = gtk browser
 run:
 	gtk/mobile $(abs_top_builddir)/test/samples/writer-edit.fodt
 else
+if ENABLE_QTAPP
+SUBDIRS = qt browser
+else
 if ENABLE_WASM
 SUBDIRS = wasm browser
 else !ENABLE_WASM
 SUBDIRS = browser
 endif !ENABLE_WASM
+endif
 endif
 
 else
