CODA-Q: support copy / clipboard write
Signed-off-by: Sarper Akdemir <sarper.akdemir@collabora.com>
Change-Id: I2842f85744c5a4be2054fb23a160a62778e49df1

--- a/qt/Makefile.am
+++ b/qt/Makefile.am
@@ -24,6 +24,7 @@ cmake_list= \
             ../common/FileUtil.cpp \
             ../common/FileUtil-unix.cpp \
             ../common/Log.cpp \
+            ../common/MobileApp.cpp \
             ../common/TraceEvent.cpp \
             ../common/Protocol.cpp \
             ../common/RegexUtil.cpp \
