Link with ws2_32.lib and iphlpapi.lib also in the Release configuration
(The PocoNet library has references to those.)

Signed-off-by: Tor Lillqvist <tml@collabora.com>
Change-Id: I03f62a836a48b7f852b9691ed3c9958101524fa5

--- a/windows/coda/CODALib/CODALib.vcxproj
+++ b/windows/coda/CODALib/CODALib.vcxproj
@@ -95,7 +95,7 @@
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableUAC>false</EnableUAC>
-      <AdditionalDependencies>libpng.lib;zlib.lib;libzstd_static.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>libpng.lib;zlib.lib;libzstd_static.lib;ws2_32.lib;iphlpapi.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
