Move ClipboardData to a header of its own
I am fairly sure I will have need for just ClipboardData later,
without wanting to pull in the rest of what Clipboard.hpp uses.

Also change ClipboardData::read() to return a bool instead of throwing
an exception (of our own type) on error. Again, to avoid causing a
dependency on our exception type just for reading a simple data
structure.

Signed-off-by: Tor Lillqvist <tml@collabora.com>
Change-Id: I356ff10514a96e4d3ca97131ecbf0707123273f6

--- a/Makefile.am
+++ b/Makefile.am
@@ -477,6 +477,7 @@ shared_headers = \
                  common/Authorization.hpp \
                  common/CharacterConverter.hpp \
                  common/Clipboard.hpp \
+                 common/ClipboardData.hpp \
                  common/CommandControl.hpp \
                  common/Common.hpp \
                  common/ConfigUtil.hpp \
