--- a/android/lib/src/main/cpp/CMakeLists.txt.in
+++ b/android/lib/src/main/cpp/CMakeLists.txt.in
@@ -12,6 +12,7 @@ add_library(androidapp SHARED
             ../../../../../common/FileUtil.cpp
             ../../../../../common/FileUtil-unix.cpp
             ../../../../../common/Log.cpp
+            ../../../../../common/MobileApp.cpp
             ../../../../../common/TraceEvent.cpp
             ../../../../../common/Protocol.cpp
             ../../../../../common/RegexUtil.cpp
