CODA-Q: create a first proof of concept for single process multi-docs
coda-q is able to now open two documents in the same process.
via `qt/coda-qt path/to/doc1 path/to/doc2`
Right now it is hardcoded to two documents... as it is an experiment.

Even though it is able to open the documents and it is possible to edit them
both without problems, the load of documents seem exteremely unstable.

- Second document needs to wait until the first document is fully loaded. (right
now there's a 10 second delay for loading the second document to mitigate that)

- And the first document needs to be interacted with after the 10 second mark.
  Otherwise it somehow blocks the loading of the second document...

Signed-off-by: Sarper Akdemir <sarper.akdemir@collabora.com>
Change-Id: I55e83f13d4d573209c011b7111e8e972ae1ea499

--- a/qt/Makefile.am
+++ b/qt/Makefile.am
@@ -64,4 +64,4 @@ bridge.moc.cpp: bridge.hpp
 
 CLEANFILES = $(BUILT_SOURCES)
 
-coda_qt_SOURCES = coda-qt.cpp $(BUILT_SOURCES) $(cmake_list)
+coda_qt_SOURCES = coda-qt.cpp WebView.cpp $(BUILT_SOURCES) $(cmake_list)
