We hardly need to produce a reference assembly
Signed-off-by: Tor Lillqvist <tml@collabora.com>
Change-Id: I6edc0c4420d47ab3a56b8e049a83aa7904cdf3cc

--- a/windows/coda/PrintPDFAndDelete/PrintPDFAndDelete.csproj
+++ b/windows/coda/PrintPDFAndDelete/PrintPDFAndDelete.csproj
@@ -9,6 +9,7 @@
     <Platforms>x64;ARM64</Platforms>
     <UseWPF>True</UseWPF>
     <StartupObject>PrintPDFAndDelete.PrintPDFAndDelete</StartupObject>
+    <ProduceReferenceAssembly>False</ProduceReferenceAssembly>
   </PropertyGroup>
 
   <ItemGroup>
