Run PrintPDFAndDelete from CODA
Pass the temporary file to be printed as a file: URI to avoid codepage
or quoting issues.

Put the executable (etc) of PrintPDFAndDelete into the same folder as
where CODA.exe goes.

Signed-off-by: Tor Lillqvist <tml@collabora.com>
Change-Id: I20f1160de6c9819388cbbf47111c97ee695307c6

--- a/windows/coda/PrintPDFAndDelete/PrintPDFAndDelete.csproj
+++ b/windows/coda/PrintPDFAndDelete/PrintPDFAndDelete.csproj
@@ -10,6 +10,9 @@
     <UseWPF>True</UseWPF>
     <StartupObject>PrintPDFAndDelete.PrintPDFAndDelete</StartupObject>
     <ProduceReferenceAssembly>False</ProduceReferenceAssembly>
+    <BaseOutputPath>..\</BaseOutputPath>
+    <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
+    <AppendRuntimeIdentifierToOutputPath>false</AppendRuntimeIdentifierToOutputPath>
   </PropertyGroup>
 
   <ItemGroup>
