Make it explicit that LO_PATH should not be used at run-time in CODA-W
It is significant at build time only. It is used by code in kit and
wsd that is compiled for CODA-W (and MOBILEAPP in general), too, and
more use of ifdefs would be needed to avoid that. But hopefully that
is for values that are ignored anyway.

Signed-off-by: Tor Lillqvist <tml@collabora.com>
Change-Id: I382d3ad94e5c2d9795f08a832ba347fc0ada1bb4

--- a/windows/coda/config.h.in
+++ b/windows/coda/config.h.in
@@ -104,7 +104,7 @@
 #undef LOK_LOG_ASSERTIONS
 
 /* Path to LibreOffice installation */
-#define LO_PATH "@LO_PATH@"
+#define LO_PATH "/should/not/be/used"
 
 /* Limit the maximum number of open connections */
 #define MAX_CONNECTIONS 100
