Adapt --enable-qtapp to "Fix and simplify logging in CODA-W"
(1e304e3cc2893af1a4954f447c79da1f160e3951)

Signed-off-by: Stephan Bergmann <stephan.bergmann@collabora.com>
Change-Id: I2fb8bd14214d5992cb78304eafe934c4d298ca2c

--- a/qt/Makefile.am
+++ b/qt/Makefile.am
@@ -23,7 +23,8 @@ cmake_list= \
             ../common/Crypto-stub.cpp \
             ../common/FileUtil.cpp \
             ../common/FileUtil-unix.cpp \
-            ../common/Log.cpp \
+            ../common/Log-common.cpp \
+            ../common/Log-poco.cpp \
             ../common/MobileApp.cpp \
             ../common/TraceEvent.cpp \
             ../common/Protocol.cpp \
