--- a/macos/coda/Config.xcconfig.in
+++ b/macos/coda/Config.xcconfig.in
@@ -11,6 +11,8 @@
 // https://help.apple.com/xcode/#/dev745c5c974
 
 HOMEBREW_PATH = "@HOMEBREW_PATH@"
+POCO_INCLUDES = "@POCOINCLUDE@"
+POCO_LIBS = "@POCOLIB@"
 HEADER_SEARCH_PATHS = "@LOKIT_PATH@"
 GCC_PREPROCESSOR_DEFINITIONS = "COOLWSD_CONFIGDIR=\"@COOLWSD_CONFIGDIR@\"" "COOLWSD_LOGLEVEL=\"@COOLWSD_LOGLEVEL@\"" "NUM_PRESPAWN_CHILDREN=\"@NUM_PRESPAWN_CHILDREN@\""
 LO_PATH = @LO_PATH@
