--- a/windows/coda/CODA/CODA.vcxproj
+++ b/windows/coda/CODA/CODA.vcxproj
@@ -194,6 +194,7 @@
     <ClCompile Include="..\..\..\wsd\ClientRequestDispatcher.cpp" />
     <ClCompile Include="..\..\..\wsd\ClientSession.cpp" />
     <ClCompile Include="..\..\..\wsd\DocumentBroker.cpp" />
+    <ClCompile Include="..\..\..\wsd\dumpWsdState.cpp" />
     <ClCompile Include="..\..\..\wsd\RequestDetails.cpp" />
     <ClCompile Include="..\..\..\wsd\RequestVettingStation.cpp" />
     <ClCompile Include="..\..\..\wsd\Storage.cpp" />
