--- a/windows/coda/CODA/CODA.vcxproj.filters
+++ b/windows/coda/CODA/CODA.vcxproj.filters
@@ -131,6 +131,9 @@
     <ClCompile Include="CODA.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\..\wsd\dumpWsdState.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="CODA.rc">
