CODA-Q: build dumpWsdState.cpp
Signed-off-by: Sarper Akdemir <sarper.akdemir@collabora.com>
Change-Id: I38d903825eb8e75dc707a7a934c8ba09979431be

--- a/qt/Makefile.am
+++ b/qt/Makefile.am
@@ -56,7 +56,9 @@ cmake_list= \
             ../wsd/RequestVettingStation.cpp \
             ../wsd/Storage.cpp \
             ../wsd/TileCache.cpp \
-            ../wsd/coolwsd-fork.cpp
+            ../wsd/coolwsd-fork.cpp \
+            ../wsd/dumpWsdState.cpp
+
 
 # Sources that will be created by Qt's MOC
 BUILT_SOURCES = bridge.moc.cpp
