Fix gtkapp build.
This was missing the MobileApp source file after the multidocument
rework.

Signed-off-by: Thorsten Behrens <thorsten.behrens@collabora.com>
Change-Id: Ie56b3985785d03f9a4528e966a6f92a5323c446e

--- a/gtk/Makefile.am
+++ b/gtk/Makefile.am
@@ -35,6 +35,7 @@ cmake_list= \
             ../common/FileUtil-unix.cpp \
             ../common/Log-common.cpp \
             ../common/Log-poco.cpp \
+            ../common/MobileApp.cpp \
             ../common/TraceEvent.cpp \
             ../common/Protocol.cpp \
             ../common/RegexUtil.cpp \
