macOS: Honor the name & bundle name provided during ./configure
Particulraly --with-app-name (for the actual product name) and
--with-app-package-name (for the bundle name, like org.something).

Regarding the latter, it this commit actually renames the
--with-android-package-name to --with-app-package-name for wider reuse.

Signed-off-by: Jan Holesovsky <kendy@collabora.com>
Change-Id: I8fda626a9ce77d870754a0bdcd40c31f18deddee

--- a/android/app/appSettings.gradle.in
+++ b/android/app/appSettings.gradle.in
@@ -10,7 +10,7 @@ ext {
     liboAbiSplit        = [@ANDROID_ABI_SPLIT@]
 }
 android.defaultConfig {
-    applicationId '@ANDROID_PACKAGE_NAME@'
+    applicationId '@APP_PACKAGE_NAME@'
     versionCode @ANDROID_PACKAGE_VERSIONCODE@
     versionName '@COOLWSD_VERSION@'
 }
