--- a/macos/coda/Config.xcconfig.in
+++ b/macos/coda/Config.xcconfig.in
@@ -16,3 +16,7 @@ POCO_LIBS = "@POCOLIB@"
 HEADER_SEARCH_PATHS = "@LOKIT_PATH@"
 GCC_PREPROCESSOR_DEFINITIONS = "COOLWSD_CONFIGDIR=\"@COOLWSD_CONFIGDIR@\"" "COOLWSD_LOGLEVEL=\"@COOLWSD_LOGLEVEL@\"" "NUM_PRESPAWN_CHILDREN=\"@NUM_PRESPAWN_CHILDREN@\""
 LO_PATH = @LO_PATH@
+
+APP_BUNDLE_NAME = @APP_NAME@
+APP_PACKAGE_NAME = @APP_PACKAGE_NAME@
+PRODUCT_MODULE_NAME = coda
