Make --with-app-name mandatory for CODA-W and use it as the executable name
Signed-off-by: Tor Lillqvist <tml@collabora.com>
Change-Id: If8585f50b6fce3a82d5761300588430741ead627

--- a/windows/coda/config.props.in
+++ b/windows/coda/config.props.in
@@ -3,5 +3,6 @@
     <IncludePath>@POCOINCLUDE_WINDOWS@;@ZSTDINCLUDE_WINDOWS@;@LIBPNG_INCLUDES_WINDOWS@;@ZLIB_INCLUDES_WINDOWS@;@LOBUILDDIR_WINDOWS@\include;$(IncludePath)</IncludePath>
     <LibraryPath>@POCOLIB_WINDOWS@;@ZSTDLIB_WINDOWS@;@LIBPNG_LIBS_WINDOWS@;@ZLIB_LIBS_WINDOWS@;$(LibraryPath)</LibraryPath>
     <LO_PATH>@LO_PATH@</LO_PATH>
+    <APP_NAME>@APP_NAME@</APP_NAME>
   </PropertyGroup>
 </Project>
