macOS: All sorts of changes to pass validation & upload checks
Signed-off-by: Jan Holesovsky <kendy@collabora.com>
Change-Id: Ia20d20dcc48c77f91944f09816d7a126fceaf113

--- a/macos/coda/coda/Info.plist
+++ b/macos/coda/coda/Info.plist
@@ -2,17 +2,21 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>CFBundleIconFile</key>
-	<string>AppIcon</string>
+	<key>ITSAppUsesNonExemptEncryption</key>
+	<false/>
 	<key>CFBundleIdentifier</key>
 	<string>$(PRODUCT_BUNDLE_IDENTIFIER)</string>
 	<key>CFBundleName</key>
 	<string>$(APP_BUNDLE_NAME)</string>
 	<key>CFBundleDisplayName</key>
 	<string>$(APP_BUNDLE_NAME)</string>
+	<key>CFBundleIconFile</key>
+	<string>AppIcon</string>
 	<key>CFBundleDocumentTypes</key>
 	<array>
 		<dict>
+			<key>LSHandlerRank</key>
+			<string>Default</string>
 			<key>CFBundleTypeName</key>
 			<string>OpenDocument Text</string>
 			<key>CFBundleTypeRole</key>
@@ -25,6 +29,8 @@
 			<string>$(PRODUCT_MODULE_NAME).Document</string>
 		</dict>
 		<dict>
+			<key>LSHandlerRank</key>
+			<string>Default</string>
 			<key>CFBundleTypeName</key>
 			<string>OpenDocument Spreadsheet</string>
 			<key>CFBundleTypeRole</key>
@@ -37,6 +43,8 @@
 			<string>$(PRODUCT_MODULE_NAME).Document</string>
 		</dict>
 		<dict>
+			<key>LSHandlerRank</key>
+			<string>Default</string>
 			<key>CFBundleTypeName</key>
 			<string>OpenDocument Presentation</string>
 			<key>CFBundleTypeRole</key>
