--- a/macos/coda/Config.xcconfig.in
+++ b/macos/coda/Config.xcconfig.in
@@ -10,9 +10,12 @@
 // Configuration settings file format documentation can be found at:
 // https://help.apple.com/xcode/#/dev745c5c974
 
-HOMEBREW_PATH = "@HOMEBREW_PATH@"
+LIBPNG_INCLUDES = "@LIBPNG_INCLUDES@"
+LIBPNG_LIBS = "@LIBPNG_LIBS@"
 POCO_INCLUDES = "@POCOINCLUDE@"
 POCO_LIBS = "@POCOLIB@"
+ZSTD_INCLUDES = "@ZSTDINCLUDE@"
+ZSTD_LIBS = "@ZSTDLIB@"
 HEADER_SEARCH_PATHS = "@LOKIT_PATH@"
 GCC_PREPROCESSOR_DEFINITIONS = "COOLWSD_CONFIGDIR=\"@COOLWSD_CONFIGDIR@\"" "COOLWSD_LOGLEVEL=\"@COOLWSD_LOGLEVEL@\"" "NUM_PRESPAWN_CHILDREN=\"@NUM_PRESPAWN_CHILDREN@\""
 LO_PATH = @LO_PATH@
