macOS: Allow also liblibpng.a (in addition to libpng.a) as built by the core
Signed-off-by: Jan Holesovsky <kendy@collabora.com>
Change-Id: I3541eb3ed092e53cd599c11db9a00e8c47700baa

--- a/macos/coda/Config.xcconfig.in
+++ b/macos/coda/Config.xcconfig.in
@@ -12,6 +12,7 @@
 
 LIBPNG_INCLUDES = "@LIBPNG_INCLUDES@"
 LIBPNG_LIBS = "@LIBPNG_LIBS@"
+LIBPNG_STATIC_LIB = "@LIBPNG_STATIC_LIB@"
 POCO_INCLUDES = "@POCOINCLUDE@"
 POCO_LIBS = "@POCOLIB@"
 ZSTD_INCLUDES = "@ZSTDINCLUDE@"
