coda(file-tab): introduce new backstage file tab
Signed-off-by: codewithvk <vivek.javiya@collabora.com>
Change-Id: Ibf58cbfe3b8573ca38c8f6f5f3c0f8faec57e7e6

--- a/browser/Makefile.am
+++ b/browser/Makefile.am
@@ -182,6 +182,7 @@ COOL_CSS_LST =\
 	$(srcdir)/css/helpdialog.css \
 	$(srcdir)/css/btns.css \
 	$(srcdir)/css/notebookbar.css \
+	$(srcdir)/css/backstage.css \
 	$(srcdir)/css/jssidebar.css \
 	$(srcdir)/css/forced-colors.css \
 	$(srcdir)/css/override-smartmenus.css \
@@ -511,6 +512,7 @@ COOL_JS_LST =\
 	src/control/Control.NotebookbarImpress.js \
 	src/control/Control.NotebookbarDraw.js \
 	src/control/Control.NotebookbarBuilder.js \
+	src/control/Control.BackstageView.ts \
 	src/control/Control.ContextToolbar.ts \
 	src/control/Control.Layers.js \
 	src/control/Control.SidebarBase.ts \
