--- a/windows/coda/AppxManifest.xml.in
+++ b/windows/coda/AppxManifest.xml.in
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Package xmlns="http://schemas.microsoft.com/appx/manifest/foundation/windows10" xmlns:uap="http://schemas.microsoft.com/appx/manifest/uap/windows10" xmlns:rescap="http://schemas.microsoft.com/appx/manifest/foundation/windows10/restrictedcapabilities" xmlns:desktop="http://schemas.microsoft.com/appx/manifest/desktop/windows10">
-    <Identity Name="CollaboraProductivityLtd.CODA" Version="%VER" Publisher="CN=E9F172FF-9203-4DB8-A589-184C7A58C071" ProcessorArchitecture="%ARCH"/>
+    <Identity Name="CollaboraProductivityLtd.CollaboraOfficeDesktop" Version="%VER" Publisher="CN=E9F172FF-9203-4DB8-A589-184C7A58C071" ProcessorArchitecture="%ARCH"/>
     <Properties>
-        <DisplayName>Collabora Online Desktop App</DisplayName>
+        <DisplayName>Collabora Office</DisplayName>
         <PublisherDisplayName>Collabora Productivity Ltd</PublisherDisplayName>
         <Logo>Assets/logo.png</Logo>
     </Properties>
@@ -18,7 +18,7 @@
         <rescap:Capability Name="runFullTrust"/>
     </Capabilities>
     <Applications>
-        <Application Id="CODA" Executable="CODA.exe" EntryPoint="Windows.FullTrustApplication">
+        <Application Id="CODA" Executable="Collabora Office.exe" EntryPoint="Windows.FullTrustApplication">
             <uap:VisualElements DisplayName="Collabora Office" Description="sofficeUapDescription" Square150x150Logo="Assets/Square150x150Logo.png" Square44x44Logo="Assets/Square44x44Logo.png" BackgroundColor="white"/>
         </Application>
     </Applications>
