--- a/windows/coda/AppxManifest.xml.in
+++ b/windows/coda/AppxManifest.xml.in
@@ -2,7 +2,7 @@
 <Package xmlns="http://schemas.microsoft.com/appx/manifest/foundation/windows10" xmlns:uap="http://schemas.microsoft.com/appx/manifest/uap/windows10" xmlns:rescap="http://schemas.microsoft.com/appx/manifest/foundation/windows10/restrictedcapabilities" xmlns:desktop="http://schemas.microsoft.com/appx/manifest/desktop/windows10">
     <Identity Name="CollaboraProductivityLtd.CollaboraOfficeDesktop" Version="%VER" Publisher="CN=E9F172FF-9203-4DB8-A589-184C7A58C071" ProcessorArchitecture="%ARCH"/>
     <Properties>
-        <DisplayName>Collabora Office</DisplayName>
+        <DisplayName>Collabora Office Desktop</DisplayName>
         <PublisherDisplayName>Collabora Productivity Ltd</PublisherDisplayName>
         <Logo>Assets/logo.png</Logo>
     </Properties>
@@ -19,7 +19,7 @@
     </Capabilities>
     <Applications>
         <Application Id="CODA" Executable="Collabora Office.exe" EntryPoint="Windows.FullTrustApplication">
-            <uap:VisualElements DisplayName="Collabora Office" Description="sofficeUapDescription" Square150x150Logo="Assets/Square150x150Logo.png" Square44x44Logo="Assets/Square44x44Logo.png" BackgroundColor="white"/>
+            <uap:VisualElements DisplayName="Collabora Office Desktop" Description="sofficeUapDescription" Square150x150Logo="Assets/Square150x150Logo.png" Square44x44Logo="Assets/Square44x44Logo.png" BackgroundColor="white"/>
         </Application>
     </Applications>
 </Package>
