CODA: Add default templates to Backstage + Prettier formatting updates
- Prefetch templates from core at build time and show thumbnails on Backstage.
- Added empty templates.
- Prettier formatting applied to qt/coda-qt.cpp.

Signed-off-by: codewithvk <vivek.javiya@collabora.com>
Change-Id: I2b8540cd294148fcbe0e7bb14318e35e3845a67a

--- a/qt/Makefile.am
+++ b/qt/Makefile.am
@@ -12,7 +12,7 @@ AM_CPPFLAGS = -pthread \
               ${warning_flags} \
               ${include_paths}
 
-AM_LDFLAGS = -pthread ${QT6_LIBS} -ldl $(ZSTD_LIBS) ${PNG_LIBS}
+AM_LDFLAGS = -pthread ${QT6_LIBS} -ldl $(ZSTD_LIBS) ${PNG_LIBS} -lPocoZip
 
 # Android's CMakefile list re-worked:
 
