CODA-Q: make single instance run at a given time using DBus
and prevent multiple instances of the same document at once.

- activate appropriate window or create new document when DBus request is received
  - if called without arguments, just activate first one of the existing windows
  - if called with --textdocument, --spreadsheet, --presentation create new document window
  - if called with a document path(s)
    - open the document(s)
    - or if existing window is found, activate it

Signed-off-by: Sarper Akdemir <sarper.akdemir@collabora.com>
Change-Id: Ic0734e0483f00d9c383d9fb2e42eb026286fa5ff

--- a/qt/Makefile.am
+++ b/qt/Makefile.am
@@ -61,13 +61,15 @@ cmake_list= \
 
 
 # Sources that will be created by Qt's MOC
-BUILT_SOURCES = bridge.moc.cpp
+BUILT_SOURCES = bridge.moc.cpp DBusService.moc.cpp
 bridge.moc.cpp: bridge.hpp
+	$(MOC) $(MOCFLAGS) -o $@ $<
+DBusService.moc.cpp: DBusService.hpp
 	$(MOC) $(MOCFLAGS) -o $@ $<
 
 CLEANFILES = $(BUILT_SOURCES)
 
-coda_qt_SOURCES = coda-qt.cpp WebView.cpp $(BUILT_SOURCES) $(cmake_list)
+coda_qt_SOURCES = coda-qt.cpp WebView.cpp DBusService.cpp $(BUILT_SOURCES) $(cmake_list)
 
 ### --- Qt translations integration begin ---
 
