CODA-Q: Add missing object file
...to avoid

> make[3]: Entering directory '/home/sberg/coda-q/online/qt'
> /bin/sh ../libtool  --tag=CXX   --mode=link g++  -fdiagnostics-color=always -g  -grecord-gcc-switches -Wp,-D_GLIBCXX_ASSERTIONS -fstack-protector-strong -fstack-clash-protection -fcf-protection -std=c++20 -Werror -pthread -lQt6WebEngineWidgets -lQt6WebEngineCore -lQt6Quick -lQt6QmlMeta -lQt6QmlWorkerScript -lQt6QmlModels -lQt6OpenGL -lQt6WebChannel -lQt6Qml -lQt6Network -lQt6Positioning -lQt6PrintSupport -lQt6Widgets -lQt6Gui -lQt6DBus -lQt6Core -ldl -lzstd -lpng16 -lPocoZip  -o coda-qt coda-qt.o WebView.o DBusService.o bridge.moc.o DBusService.moc.o ../common/Authorization.o ../common/ConfigUtil.o ../common/CommandControl.o ../common/Crypto-stub.o ../common/FileUtil.o ../common/FileUtil-unix.o ../common/Log-common.o ../common/Log-poco.o ../common/MobileApp.o ../common/TraceEvent.o ../common/Protocol.o ../common/RegexUtil.o ../common/Simd.o ../common/StringVector.o ../common/Session.o ../common/SigUtil-mobile.o ../common/SpookyV2.o ../common/Unit.o ../common/Unit-mobile.o ../common/Util.o ../common/Util-mobile.o ../common/Util-unix.o ../common/Uri.o ../kit/ChildSession.o ../kit/DeltaSimd.o ../kit/Kit.o ../kit/KitQueue.o ../kit/LogUI.o ../kit/KitWebSocket.o ../net/FakeSocket.o ../net/Socket.o ../wsd/ClientSession.o ../wsd/DocumentBroker.o ../wsd/COOLWSD.o ../wsd/ClientRequestDispatcher.o ../wsd/RequestDetails.o ../wsd/RequestVettingStation.o ../wsd/Storage.o ../wsd/TileCache.o ../wsd/coolwsd-fork.o ../wsd/dumpWsdState.o  -lcap  -lPocoNetSSL -lPocoNet -lPocoUtil -lPocoJSON -lPocoXML -lPocoFoundation -lPocoCrypto
> libtool: link: g++ -fdiagnostics-color=always -g -grecord-gcc-switches -Wp,-D_GLIBCXX_ASSERTIONS -fstack-protector-strong -fstack-clash-protection -fcf-protection -std=c++20 -Werror -o coda-qt coda-qt.o WebView.o DBusService.o bridge.moc.o DBusService.moc.o ../common/Authorization.o ../common/ConfigUtil.o ../common/CommandControl.o ../common/Crypto-stu

--- a/qt/Makefile.am
+++ b/qt/Makefile.am
@@ -54,6 +54,7 @@ cmake_list= \
             ../wsd/ClientRequestDispatcher.cpp \
             ../wsd/RequestDetails.cpp \
             ../wsd/RequestVettingStation.cpp \
+            ../wsd/SlideCache.cpp \
             ../wsd/Storage.cpp \
             ../wsd/TileCache.cpp \
             ../wsd/coolwsd-fork.cpp \
