CODA-W: add missing wsd/SlideCache.cpp to project
Signed-off-by: Andras Timar <andras.timar@collabora.com>
Change-Id: I45ac19afea13d00557c4f4b8efcddbb9a8a439cf

--- a/windows/coda/CODA/CODA.vcxproj
+++ b/windows/coda/CODA/CODA.vcxproj
@@ -292,6 +292,7 @@
     <ClCompile Include="..\..\..\wsd\dumpWsdState.cpp" />
     <ClCompile Include="..\..\..\wsd\RequestDetails.cpp" />
     <ClCompile Include="..\..\..\wsd\RequestVettingStation.cpp" />
+    <ClCompile Include="..\..\..\wsd\SlideCache.cpp" />
     <ClCompile Include="..\..\..\wsd\Storage.cpp" />
     <ClCompile Include="..\..\..\wsd\TileCache.cpp" />
     <ClCompile Include="..\..\..\wsd\coolwsd-fork.cpp" />
